commented out float:left to fix picture overlap

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -103,7 +103,7 @@ div.tm_member{float:left; clear:both; padding:20px 0px 0px 35px;}
   }
 
 
-.proj_det_sub_img{ padding-left:35px; clear:left; float:left; margin-top:-195px;}
+.proj_det_sub_img{ padding-left:35px; clear:left; /*float:left;*/ margin-top:-195px;}
 
 /* press page */
 
